--- a/Modelamiento Matemático/index.html
+++ b/Modelamiento Matemático/index.html
@@ -63,7 +63,7 @@
                     id="card7">
             </div>
             <div class="col-md-6">
-                <button class="mx-auto d-block mt-3 btn-primary btn-lg" id="start">Iniciar Partida</button>
+                <button type="button" class="mx-auto d-block mt-3 btn-primary btn-lg" id="start">Iniciar Partida</button>
             </div>
             <div class="col-md-3">
                 <h3 class="text-center">Cartas 8</h3>
@@ -96,8 +96,6 @@
         </div>
 
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
